--- a/Gmail.html
+++ b/Gmail.html
@@ -64,7 +64,7 @@
             </svg> </a>
         </li>
       </ul>
-      <a class="nav-brand ml-3"><img src="\gmail.png" width=100 height=60> </a>
+      <a class="nav-brand ml-3"><img src="gmail.png" width=100 height=60> </a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
         aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
